# SLAM

./: 1.视觉SLAM基础与导论.ipynb  Pangolin-master.zip:Zone.Identifier  内存对齐.md
1+.finding_an_image_transform/: 如何找到两张图片中的旋转_从视频中还原相机发生的旋转.ipynb
5.RANSAC/: my_RANSAC.ipynb
HW-of-SLAMBOOK2/hw11/p1/: PR_plot.m
HW-of-SLAMBOOK2/hw12/inverse_depth/: inverse_depth_mapping.cpp
HW-of-SLAMBOOK2/hw2/: helloSLAM.cpp  useHello.cpp
HW-of-SLAMBOOK2/hw2/src/: libhelloSLAM.cpp
bayes_filter/: 易懂的贝叶斯滤波理解与推导教程bayes_filter.md
easy_slam_tutorial/1+.finding_an_image_transform/: find_transform.ipynb
easy_slam_tutorial/1.feature_extract/: feature_extract_note.ipynb  从零开始实现FAST特征点提取算法教程.md
easy_slam_tutorial/2.Otsu's_Method_algorithm/: Otsu.ipynb
easy_slam_tutorial/3.image_smooth_blur/: gauss_blur.ipynb
easy_slam_tutorial/4.Connected_Components/: fast_connected_component.ipynb
easy_slam_tutorial/4.Connected_Components/real_scene_practice/: find_the_white_circle.ipynb  target_trrack.ipynb
easy_slam_tutorial/joint_robot_simulation/: two_joint_arm_robot.ipynb
lib/ceres-bin/: CMakeCache.txt  CTestTestfile.cmake  CeresConfig-install.cmake  Makefile  cmake_install.cmake  install_manifest.txt
lib/ceres-bin/cmake/: uninstall.cmake
lib/ceres-bin/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/ceres-bin/examples/sampled_function/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/ceres-bin/examples/slam/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/ceres-bin/examples/slam/pose_graph_2d/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/ceres-bin/examples/slam/pose_graph_3d/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/ceres-bin/include/ceres/internal/: config.h
lib/ceres-bin/internal/ceres/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/ceres-bin/internal/ceres/generated_bundle_adjustment_tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
my_work/ch10后端优化/: 位姿图优化.md  滑动窗口法.md
my_work/ch11回环检测/: 回环检测.md
my_work/ch12建图/: 1.建图概述.md  2.单目稠密建图.md  3.基于深度相机的稠密建图.md  4.网格化重建.md
my_work/ch2cpp入门/: cmake使用方法.md
my_work/ch3/: 1.旋转矩阵和Eigen库.md  3.相似、仿射、射影变换.md  CMakeLists.txt  useGeometry.cpp
my_work/ch3基本描述与变换/: 2.旋转向量、欧拉角、四元数.md  useEigen.cpp
my_work/ch4/: 3.相似变换群与李代数.md
my_work/ch4李群与李代数/: 1.李群与李代数基础和定义、指数和对数映射.md  2.李代数求导与扰动模型.md  CMakeLists.txt  trajectoryError.cpp  trajectory问题.md  useSophus.cpp
my_work/ch5/: 1.相机模型.md  CMakeLists.txt
my_work/ch5相机模型/: 1.相机模型.md  2.图像.md  CMakeLists.txt  imageBasics.cpp  joinMap.cpp  stereoVision.cpp  undistortImage.cpp  畸变模型.md
my_work/ch6非线性优化/: 1.非线性优化.md  CMakeLists.txt  ceresCurveFitting.cpp  gaussNewton.cpp  高斯牛顿法.md
my_work/ch7视觉里程计_特征点法/: 1.特征点法.md  2.2D−2D对极几何：只利用特征信息的位姿估计.md  3.单应矩阵.md  4.三角测量：确定特征点的3d位置.md  5.3D−3D_ICP：利用深度信息的位姿估计.md  6.3D-2D_PnP：只需知道一张图中特征点的3D位置.md  CMakeLists.txt  orb_cv.cpp  pose_estimation_2d2d.cpp  pose_estimation_2d2d.sh  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation.cpp  triangulation.sh  单目_双目相机获取深度图的步骤.md  奇异值分解.md
my_work/ch8视觉里程计_直接法/: index.md  光流法.md  直接法.md
my_work/ch9后端优化/: BA与图优化.md  xKF.md
slambook/: .gitignore
slambook/ch10/: CMakeLists.txt  pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algebra.cpp
slambook/ch12/: .gitignore  gitignore.md  map.pcd
slambook/ch12/dense_RGBD/: CMakeLists.txt  octomap_mapping.cpp  pointcloud_mapping.cpp  surfel_mapping.cpp
slambook/ch12/dense_mono/: CMakeLists.txt
slambook/ch2/: CMakeLists.txt
slambook/ch2/include/: libHelloSLAM.h
slambook/ch3/: useEigen.md
slambook/ch3/useGeometry/: eigenGeometry.cpp
slambook/ch4/useSophus/: CMakeLists.txt  useSophus.cpp
slambook/ch5/imageBasics/: CMakeLists.txt
slambook/ch6/: gaussNewton.cpp
slambook/ch7/: drawKeypoints.md
slambook/ch8/: CMakeLists.txt  direct_method.cpp  optical_flow.cpp
slambook/ch9/: CMakeLists.txt  bundle_adjustment_g2o.cpp
